<resources>
    <string name="app_name">FastScrollDemo</string>
    <string name="fast_scroller">Fast Scroller</string>
    <string name="fast_scroll_rv">Fast-scroll RecyclerView</string>
    <string name="fast_scroller_intro">This approach is ported from a library called LollipopContactsRecyclerViewFastScroller. It is simple, lightweight but lacks customization capabilities. More problematically, the xml has to declared one more view beside RecyclerView to achieve the purpose, it could be a little troublesome to modify such code in large codebase.</string>
    <string name="fast_scroll_rv_intro">This approach is a combination of the above-mentioned library and another library called RecyclerView-FastScroll. It not only keeps the simplicity of the original lib but also gains the ability of declaring only one view in xml layout. A considerable drawback is the fact that the drawing process, the bubble for instance, is actually hardcoded and difficult to change.</string>
    <string name="call_button">Call button</string>
    <string name="video_call_button">Video call button</string>
    <string name="profile_picture">Profile picture</string>
    <string name="scroller_enabled">Is scroller enabled?</string>
    <string name="rv_fast_scroll_lib">RecyclerView-FastScroll Library</string>
    <string name="loading_contacts">Loading contacts…</string>
    <string name="alphabet_index_rv">AlphabetIndexRV</string>
    <string name="recycler_bubble">Recycler Bubble</string>
    <string name="other_libraries">Other libraries</string>
    <string name="recycler_fast_scroll">Recycler Fast Scroll</string>
    <string name="default_fast_scroll">Default RV Fast Scroll</string>
    <string name="without_bubble">This approach does not include the bubble indicates first letter of current position. However, it should be added fairly easily.</string>
</resources>
