<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    tools:context="com.example.cpu10661.fastscrolldemo.MainActivity">

    <Button
        android:id="@+id/btn_fast_scroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_scroller" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_scroller_intro" />

    <Button
        android:id="@+id/btn_fast_scroll_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/fast_scroll_recycler_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_scroll_rv_intro" />

</LinearLayout>
